# academind2

./: .gitignore  README.md  config.defaults.yaml  config.example.yaml  projekt-design-system.html  pyproject.toml  requirements.txt  sdd.md
.cursor/rules/: gsd-context.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-domain-shell-foundations/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  SKELETON.md  VERIFICATION.md
.planning/phases/02-trusted-ingestion-catalog-backbone/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-CONTEXT.md  02-RESEARCH.md
.planning/phases/04-document-consolidation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: __init__.py  exceptions.py  logging_config.py  main.py
app/api/routes/: artefacts.py  (+6 more)
app/core/: config.py  db.py  paths.py
app/models/: catalogue.py  hierarchy.py  jobs.py
app/obs/: __init__.py  logging.py
app/repositories/: catalogue.py  hierarchy.py  jobs.py
app/services/: artefact_service.py  hierarchy_resolver.py  hierarchy_service.py  ingestion_service.py  pdf_merge_service.py  processados_lock.py  upload_batch_service.py
app/static/: app.css
app/templates/: base.html  dashboard.html  discipline.html  discipline_list.html
tests/: conftest.py  test_catalogue_views.py  test_health_placeholder.py  test_htmx_upload.py  test_ingestion.py  test_pdf_merge.py
(+9 files in other folders)
