[project]
name = "academind"
version = "0.1.0"
description = "acadeMIND — local academic materials workstation (phase 1 skeleton)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
